# TSV_tabular_editor

./: .gitignore  CMakeLists.txt  README.MD
TSV_tabular_editor/: mainwindow.cpp
src/: CMakeLists.txt  main.cpp  mainwindow.cpp
src/include/: mainwindow.h
src/tsv-editor/: CMakeLists.txt  mainwindow.cpp  mytablemodel.cpp
src/tsv-editor/include/: mainwindow.h  mytablemodel.h
test/: CMakeLists.txt  tests.cpp
